--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>{{title}}</title>
 
     <!-- Link CSS Style Sheet -->
-    <link rel="stylesheet" href="/static/style.css" />
+    <link rel="stylesheet" href="./static/style.css" />
   </head>
 
   <!-- Google Font -->
@@ -23,7 +23,7 @@
     <!-- Here Header Start -->
     <header>
       <!-- Logo -->
-      <div class="logo"><img src="/static/logo.png" alt="Logo" /></div>
+      <div class="logo"><img src="./static/logo.png" alt="Logo" /></div>
 
       <ul class="utility">
         <li><a href="/index">Home</a></li>
@@ -46,7 +46,7 @@
     
 
     <!-- Stethoscope Image or Backgrond Image -->
-        <img src="/static/stethoscope.png" class="bgc">
+        <img src="./static/stethoscope.png" class="bgc">
 
     <!-- Here Hero Section or Main Section Start -->
     <main class="heroSection">
@@ -54,7 +54,7 @@
       <section class="leftHero">
 
         <!-- Top angle Image or Arrow -->
-        <img src="/static/topAngle.png">
+        <img src="./static/topAngle.png">
 
         <!-- Main Heading -->
         <h1 class="heading">
@@ -72,23 +72,23 @@
         <button class="bigBtn"><a href="/contact">Appointment</a> </button>
 
         <!-- Bottom Angle Image -->
-        <img src="/static/bottomAngle.png" class="bottomAngle">
+        <img src="./static/bottomAngle.png" class="bottomAngle">
 
 
         <!-- Mouse Image -->
-        <img src="/static/mouse.png" class="mouseImage">
+        <img src="./static/mouse.png" class="mouseImage">
       </section>
 
       <!-- Here Right Hero Section Start -->
       <section class="rightHero">
         <!-- Green Ball or Bgc -->
-        <div class="greenBox"><img src="/static/greenBox.png" /></div>
+        <div class="greenBox"><img src="./static/greenBox.png" /></div>
 
         <!-- Yellow Box -->
-        <div class="yellowBox"><img src="/static/yellowBox.png" /></div>
+        <div class="yellowBox"><img src="./static/yellowBox.png" /></div>
 
         <!-- DR Sahab ki I Image -->
-        <div class="drImage"><img src="/static/doctor.png" /></div>
+        <div class="drImage"><img src="./static/doctor.png" /></div>
       </section>
     </main>
   </body>
