--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
       <ul class="utility">
         <li><a href="/index">Home</a></li>
-        <li><a href="/about">About Us</a></li>
-        <li><a href="/contact">Appointment</a> </li>
-        <li><a href="/doccard">our Doctor</a> </li>
+        <li><a href="./template/about.html">About Us</a></li>
+        <li><a href="./template/contact">Appointment</a> </li>
+        <li><a href="./template/doccard">our Doctor</a> </li>
 
-        <li><a href="/confirm">view Appointment Detail</a> </li>
+        <li><a href="./template/confirm">view Appointment Detail</a> </li>
        
         <li><a href="{% url 'logout'%}" class="btn4">Logout</a></li>
 
